--- a/vignettes/model-fairness.Rmd
+++ b/vignettes/model-fairness.Rmd
@@ -34,12 +34,6 @@ include demographic parity, proportional parity, predictive rate parity,
 accuracy parity, false negative rate parity, false positive rate parity, true
 positive rate parity, negative predicted value parity, and specificity parity.
 
-Note that, in an audit context, not all fairness measures are equally
-appropriate in all situations. The decision tree below aids with choosing which
-measure is best for the situation at hand (Büyük, 2023).
-
-<p align='center'><img src='fairness-tree.png' alt='fairness' width='80%'></p>
-
 *Example:*
 
 To illustrate how to use the `model_fairness()` function, we will use a
@@ -88,9 +82,12 @@ represents a false positive in the confusion matrix.
 For illustrative purposes, let's interpret the full set of fairness metrics for
 the African American, Asian, and Hispanic groups in comparison to the
 privileged group (Caucasian). See Pessach & Shmueli (2022) for a more detailed
-explanation of some of these metrics.
+explanation of some of these metrics. However, note that not all fairness
+measures are equally appropriate in all audit situations. The decision tree
+below aids the auditor with choosing which measure is best for the situation at
+hand (Büyük, 2023).
 
-&nbsp;
+<p align='center'><img src='fairness-tree.png' alt='fairness' width='80%'></p>
 
 1. **Demographic parity (Statistical parity)**: Compares the number of positive
   predictions (i.e., reoffenders) between each unprivileged (i.e., ethnic) group
@@ -127,8 +124,6 @@ model_fairness(
     - *Hispanic*: The demographic parity for Hispanics is 0.22173, meaning that
       there are about five times less Hispanics predicted as reoffenders in
       these data than that there are Caucasians.
-
-&nbsp;
 
 2. **Proportional parity (Disparate impact)**: Compares the proportion of
   positive predictions of each unprivileged group to that in the privileged
@@ -232,8 +227,6 @@ print(x)
 plot(x, type = "posterior")
     ```
 
-&nbsp;
-
 3. **Predictive rate parity (Equalized odds)**: Compares the overall positive
   prediction rates (e.g., the precision) of each unprivileged group to the
   privileged group.
@@ -268,8 +261,6 @@ model_fairness(
       privileged group (Caucasians). This indicates relatively fair treatment in
       the algorithm's overall positive predictions.
 
-&nbsp;
-
 4. **Accuracy parity**: Compares the accuracy of each unprivileged group's
   predictions with the privileged group.
 
@@ -299,8 +290,6 @@ model_fairness(
     - *Hispanic*: The accuraty parity for Hispanics is 1.0351, suggesting their
       accuracy is slightly higher than for Caucasians, indicating potential
       favoritism in overall accuracy.
-
-&nbsp;
 
 5. **False negative rate parity (Treatment equality)**: Compares the false
   negative rates of each unprivileged group with the privileged group.
@@ -334,8 +323,6 @@ model_fairness(
       relatively similar rates as the privileged group (Caucasians), suggesting
       fair treatment in this aspect.
 
-&nbsp;
-
 6. **False positive rate parity**: Compares the false positive rates (e.g., for
   non-reoffenders) of each unprivileged group with the privileged group.
 
@@ -368,8 +355,6 @@ model_fairness(
       suggesting they are less likely to be falsely predicted as reoffenders
       compared to Caucasians. This indicates potential fair treatment of
       Hispanics in false positive predictions.
-
-&nbsp;
 
 7. **True positive rate parity (Equal opportunity)**: Compares the true positive
   rates (e.g., for reoffenders) of each unprivileged group with the privileged
@@ -406,8 +391,6 @@ model_fairness(
       privileged group (Caucasians). This indicates relatively fair treatment
       in the algorithm's true positive predictions.
 
-&nbsp;
-
 8. **Negative predicted value parity**: Compares the negative predicted value
   (e.g., for non-reoffenders) of each unprivileged group with that of the
   privileged group.
@@ -442,8 +425,6 @@ model_fairness(
       suggesting that their negative predicted value is slightly higher than for
       Caucasians. This indicates potential favoritism towards Hispanics in
       predicting non-reoffenders.
-
-&nbsp;
 
 9. **Specificity parity (True negative rate parity)**: Compares the specificity
   (true negative rate) of each unprivileged group with the privileged group.
@@ -483,9 +464,9 @@ model_fairness(
 - Büyük, S. (2023). *Automatic Fairness Criteria and Fair Model Selection for Critical ML Tasks*, Master Thesis, Utrecht University. - [View Online](https://studenttheses.uu.nl/handle/20.500.12932/44225)
 - Calders, T., & Verwer, S. (2010). Three naive Bayes approaches for discrimination-free classification. In *Data Mining and Knowledge Discovery*. Springer Science and Business Media LLC. - [View Online](https://doi.org/10.1007/s10618-010-0190-x)
 - Chouldechova, A. (2017). Fair Prediction with Disparate Impact: A Study of Bias in Recidivism Prediction Instruments. In *Big Data*. Mary Ann Liebert Inc. - [View Online](https://doi.org/10.1089/big.2016.0047)
-- Feldman, M., Friedler, S. A., Moeller, J., Scheidegger, C., & Venkatasubramanian, S. (2015). Certifying and Removing Disparate Impact. In *Proceedings of the 21th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining. - [View Online](https://doi.org/10.1145/2783258.2783311)
+- Feldman, M., Friedler, S. A., Moeller, J., Scheidegger, C., & Venkatasubramanian, S. (2015). Certifying and Removing Disparate Impact. In *Proceedings of the 21th ACM SIGKDD International Conference on Knowledge Discovery and Data Mining.* - [View Online](https://doi.org/10.1145/2783258.2783311)
 - Fisher, R. A. (1970). *Statistical Methods for Research Workers*. Oliver & Boyd.
 - Friedler, S. A., Scheidegger, C., Venkatasubramanian, S., Choudhary, S., Hamilton, E. P., & Roth, D. (2019). A comparative study of fairness-enhancing interventions in machine learning. In *Proceedings of the Conference on Fairness, Accountability, and Transparency*. - [View Online](https://doi.org/10.1145/3287560.3287589)
-- Jamil, T., Ly, A., Morey, R. D., Love, J., Marsman, M., & Wagenmakers, E. J. (2017). Default "Gunel and Dickey" Bayes factors for contingency tables. \emph{Behavior Research Methods}, 49, 638-652. - [View Online](https://doi.org/10.3758/s13428-016-0739-8)
+- Jamil, T., Ly, A., Morey, R. D., Love, J., Marsman, M., & Wagenmakers, E. J. (2017). Default "Gunel and Dickey" Bayes factors for contingency tables. *Behavior Research Methods*, 49, 638-652. - [View Online](https://doi.org/10.3758/s13428-016-0739-8)
 - Pessach, D. & Shmueli, E. (2022). A review on fairness in machine learning. *ACM Computing Surveys*, 55(3), 1-44. - [View Online](https://doi.org/10.1145/3494672)
 - Zafar, M. B., Valera, I., Gomez Rodriguez, M., & Gummadi, K. P. (2017). Fairness Beyond Disparate Treatment & Disparate Impact. In *Proceedings of the 26th International Conference on World Wide Web*. - [View Online](https://doi.org/10.1145/3038912.3052660)
